-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0
-
None
-
Windows 7, Mac OSX 10.9.5
-
ea9a366d3f01262f32134d1e9f7853d17832dbac (qtbase/5.4.1, 13.1.2015, 5.4.1)
In QTBUG-40656, a fix was applied such that if a QComboBox's popup is showing, and the user scrolls using the scroll wheel while outside of the popup, the popup is closed.
The Gerrit link for this change is: https://codereview.qt-project.org/#/c/93251/4
I don't think that the way the bug was fixed is correct.
On both Macintosh (10.9.5) or Windows 7, the equivalent of a QComboBox in a system dialog does not have this behavior. If you click on the combo box to pop it, move the mouse cursor outside of the popup (such as over some other part of the dialog containing the combo box) and scroll using the scroll wheel, the popup does not close.
On Macintosh, I tested this using System Preferences->General->Appearance. On Windows, I tested using Control Panel->Windows Update->Change Settings->Important Updates.
I can reproduce this using the qtbase/examples/widgets/widgets/styles example experiment.
We have had a few macintosh users report bugs to us that we've tracked down to this change. The users were using trackpads, and instead of simply clicking on an item in the popup, they mostly clicked but also scrolled a tiny bit, and the tiny bit of scroll results in the popup being closed before their click can take effect. Therefore, the user thinks he is clicking on an item, but in fact he is closing the popup. This results in confusion since it's not standard behavior.
- is duplicated by
-
QTBUG-43073 Context menus disappear
-
- Closed
-
-
QTBUG-43257 Context menu will not stay open
-
- Closed
-
- replaces
-
QTBUG-43529 REG [5.3.2-5.4.0] Mac contextmenu hides after mouse scrolling
-
- Closed
-
- resulted from
-
QTBUG-40656 [REG 4->5] Windows: QComboBox popup becomes "detached" if parent widget is scrolled with the mouse wheel
-
- Closed
-
For Gerrit Dashboard: QTBUG-42731 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
101894,1 | Swallow wheel events while a popup widget is open. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
101898,2 | DiagLib: Add Wheel event to mouse event category of the event filter.. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
101923,1 | Don't close the popups on a wheel event for all platforms | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
101939,1 | WIP: Send wheel events to popup widget. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
103315,2 | Swallow wheel events while a popup widget is open. | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |
103589,2 | Diaglib/Event filter: Output application state on focus events. | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
103606,2 | WIP: Send wheel events to popup widget. | 5.4.1 | qt/qtbase | Status: ABANDONED | 0 | 0 |
106204,2 | WIP: Send wheel events to popup widget. | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |